--- a/groo/pom.xml
+++ b/groo/pom.xml
@@ -30,11 +30,7 @@
 		<url>https://github.com/Hellblazer/Groo</url>
 	</scm>
 
-	<dependencies>
-		<dependency>
-			<groupId>com.hellblazer</groupId>
-			<artifactId>nexus</artifactId>
-		</dependency>
+	<dependencies> 
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -58,6 +54,10 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>com.chiralBehaviors</groupId>
+			<artifactId>discovery-module</artifactId>
 		</dependency>
 	</dependencies>
 
