--- a/groo/pom.xml
+++ b/groo/pom.xml
@@ -58,6 +58,18 @@
 		<dependency>
 			<groupId>com.chiralBehaviors</groupId>
 			<artifactId>discovery-module</artifactId>
+			<exclusions>
+				<exclusion>
+					<artifactId>log4j</artifactId>
+					<groupId>log4j</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.1.2</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
