--- a/groo/pom.xml
+++ b/groo/pom.xml
@@ -71,6 +71,11 @@
 			<version>1.1.2</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.7</version>
+		</dependency>
 	</dependencies>
 
 	<repositories>
