--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-annotations</artifactId>
+				<version>2.3.2</version>
+			</dependency>
+			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
 				<version>4.11</version>
@@ -77,7 +82,7 @@
 			<dependency>
 				<groupId>com.fasterxml.jackson.core</groupId>
 				<artifactId>jackson-databind</artifactId>
-                <version>2.3.2</version>
+				<version>2.3.2</version>
 				<optional>true</optional>
 			</dependency>
 			<dependency>
