--- a/groo/pom.xml
+++ b/groo/pom.xml
@@ -1,5 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <groupId>com.hellblazer</groupId>
+        <version>0.0.1</version>
+        <artifactId>groo.app</artifactId>
+    </parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>groo</artifactId>
 	<name>Groo - A hierarchical JMX aggregator</name>
@@ -74,17 +79,6 @@
 		</dependency>
 	</dependencies>
 
-	<repositories>
-		<repository>
-			<id>hellblazer-release</id>
-			<url>https://repository-hal900000.forge.cloudbees.com/release/</url>
-		</repository>
-		<repository>
-			<id>hellblazer-snapshots</id>
-			<url>https://repository-hal900000.forge.cloudbees.com/snapshot/</url>
-		</repository>
-	</repositories>
-
 	<build>
 		<plugins>
 			<plugin>
@@ -112,9 +106,4 @@
 			</plugin>
 		</plugins>
 	</build>
-	<parent>
-		<groupId>com.hellblazer</groupId>
-		<version>0.0.1-SNAPSHOT</version>
-		<artifactId>groo.app</artifactId>
-	</parent>
 </project>
