--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.hellblazer</groupId>
 	<artifactId>groo.app</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>Groo - A self assembling, hierarchical JMX router</name>
 	<description>A damn efficient, heirarchical aggregator for JMX mbeans</description>
 
@@ -87,7 +87,7 @@
 			<dependency>
 				<groupId>com.chiralBehaviors</groupId>
 				<artifactId>discovery-module</artifactId>
-				<version>0.0.1-SNAPSHOT</version>
+				<version>0.0.1</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
