--- a/jmx-groo-discovery/pom.xml
+++ b/jmx-groo-discovery/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.hellblazer</groupId>
 		<artifactId>groo.app</artifactId>
-		<version>0.0.1</version>
+		<version>0.0.2-SNAPSHOT</version>
 	</parent>
 	<artifactId>jmx-groo-discovery</artifactId>
 	<name>JMX Groo Discovery</name>
