--- a/groo/pom.xml
+++ b/groo/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>com.hellblazer</groupId>
-        <version>0.0.2-SNAPSHOT</version>
+        <version>0.0.2</version>
         <artifactId>groo.app</artifactId>
     </parent>
 	<modelVersion>4.0.0</modelVersion>
