--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,7 @@
 			<dependency>
 				<groupId>com.chiralBehaviors</groupId>
 				<artifactId>discovery-module</artifactId>
-				<version>0.0.2</version>
+				<version>0.0.3-SNAPSHOT</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
